# WarGame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TDD_Guide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  docs.md  feat.md  refactor.md
.github/workflows/: ci.yml
docs/: TDD_Guide.md  project_design.md
include/WarGame/: MathUtils.h
include/WarGame2/: MathUtils.h
src/: CMakeLists.txt  MathUtils.cpp
src/logging/: DebugLogger.cpp  DebugLogger.h  FileLoggerBackend.cpp  FileLoggerBackend.h  LoggerBackend.h  MemoryLoggerBackend.cpp  MemoryLoggerBackend.h
tests/: CMakeLists.txt  test_MathUtils.cpp
